# EDTHBerlin

./: INTEGRATION_SUMMARY.md  README.md  WAYPOINT_UPDATE.md  analysis_demo.ipynb  main.py  pyproject.toml  quick_test_zigzag_noise.py  vis.py  visualize_target.ipynb
configs/: detector_configs.py  interceptor_configs.py
frontend/: index.html  main.js  styles.css
frontend/n10_detectors/: with_detectors_exclude_observable.csv
frontend/n20_detectors/: with_detectors_exclude_observable.csv
frontend/n30_detectors/: with_detectors_exclude_observable.csv
frontend/n5_detectors/: with_detectors_exclude_observable.csv
results/sweep_example/: detector_sweep_results.csv
results/sweep_example/n10_detectors/: with_detectors_exclude_observable.csv
results/test_zigzag/: with_detectors_exclude_observable.csv
results/trial_example/: baseline_exclude_observable.csv  baseline_include_observable.csv  with_detectors_exclude_observable.csv  with_detectors_include_observable.csv
src/: attackers.py  detector_configs.py  detectors.py  env.py  interceptors.py  stats_analysis.py  targets.py  trial_runner.py  zig_zag_test.py
tests/: example_optimize_detectors.py
utils/: basic_notreal.json  coverage_matrix_fa7w12e_.csv  coverage_matrix_xa4zy4f4.csv  grid-12x12(2).json  grid-12x12(6).json  grid_integration.py  load_grid.py  one_big_shape.json  presentation.json  realistic_example.json  test_greedy_visualization.ipynb  test_greedy_waypoints.py  test_grid_independence.py  test_infrared.py  test_integration_simple.py  test_waypoints.py
(+13 files in other folders)
