[project]
name = "edthberlin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=2.2.6",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.228",
    "gradio>=4.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]
